# database_flask

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
static/css/: main.css
templates/: home.html  index.html
